# yamato-shipping-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_payload_1976.json
.ai/: CONTEXT.md  PLAYBOOK.md  PROPOSAL.md  README.md  STATUS.md  TIPS.md
.github/workflows/: ship.yml
backend/: .env.example  .env.op  pyproject.toml  shipments.example.json
backend/app/: cli.py  config.py  main.py
backend/app/models/: order.py
backend/app/routers/: orders.py  shipping.py
backend/app/services/: shopify_service.py  yamato_agent.py  yamato_automation.py
frontend/: package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: Header.tsx  OrderTable.tsx  StatsBar.tsx
scripts/: __main__.py  config.py  entrypoint.sh  models.py  notify.py  ship.py  shopify_client.py  supabase_client.py  test_e2e_xvfb.py  yamato_automation.py
tests/: test_shopify_client.py  test_yamato_automation.py
