[tool.poetry]
name = "yamato-shipping-bot"
version = "0.2.0"
description = "Automated Yamato 'スマホで送る' shipping via Playwright"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.12"
certifi = ">=2024.2.2"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
playwright = "^1.49.0"

[tool.poetry.scripts]
ship = "scripts.ship:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
