[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.5"}
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
browser-use = "^0.2"
langchain-openai = "^0.3"
langchain-anthropic = {version = "^0.3", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
